k8s/mongodb.yaml
# kubectl create namespace mongodb

# kubectl -n mongodb create secret generic mongodb --from-literal=username= --from-literal=password=""

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb
  name: mongodb
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy: {}
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo
          args: ["--dbpath", "/var/home/ajm/data"]
          name: mongodb
          ports:
            - containerPort: 27017
              name: w3
          volumeMounts:
            - name: mongodb # => deployment volume name
              mountPath: "/var/home/ajm/data"
      volumes:
        - name: mongodb # deployment volume name
          persistentVolumeClaim:
            claimName: mongodb # => persistent volume claim => persistent volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
  namespace: mongodb
spec:
  ports:
    - protocol: TCP
      name: mongodb
      nodePort: 32017
      port: 27017
  selector:
    app: mongodb
  type: NodePort
